--- a/assets/styles/pages/min-width-600px.less
+++ b/assets/styles/pages/min-width-600px.less
@@ -25,6 +25,8 @@ body {
     width: 100%;
 }
 
+
+
 .clear-both{
     clear: both;
 }
@@ -45,7 +47,7 @@ body {
     height: 100%;
     width: 100%;
     background: var(--Primay-White, linear-gradient(0deg, rgba(255, 255, 255, 0.986) 0%, rgb(167, 199, 218) 100%), rgb(120, 116, 194));
-    opacity: 0.9;
+    opacity: 0.8;
     position: absolute;
     top: 0rem;
     left: 0rem;
@@ -72,6 +74,18 @@ body {
     /*padding: 1rem;*/
 }
 .imageDiv{
+    display: block;
+    /*background-image: url('../images/t/twoAfricanMen.png');*/
+    /*object-fit: cover;*/
+    width: 100%;
+    height: 100%;
+    position: absolute;
+
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    overflow: hidden;
 }
 .imageDiv img {
     /*width: 360px;
@@ -82,6 +96,11 @@ body {
     display:block;
     height:auto;
     object-fit: contain;
+
+
+    flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%;
 }
 
 .mobile-btn{
